2008-04-06  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/COPYING: Added.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileThread/*.[hm]: Made all the coding style consistent and conform to 
	Etoile guidelines.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileThread/*.[hm]: Made all license notices consistent and pretty :-)

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/*.[hm]: Made method names, class declarations and spacing 
	between these constructs consistent and compliant with Etoile coding 
	guidelines. Various method names or parameters will have to be reworked 
	though.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/ETXMLParserDelegate.h: Modified ETXMLParserDelegate protocol to 
	inherit from NSObject protocol.
	* EtoileXML/ETXMLNullHandler.h:
	* EtoileXML/ETXMLNullHandler.m:
	* EtoileXML/ETXMLParser.h:
	* EtoileXML/ETXMLParser.m:
	Removed NSObject protocol in the type of the parameters that must conform to
	ETXMLParserDelegate.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* COPYING: Updated copyright holders and replaced outdated 
	EtoileExtensionsKit mentions by EtoileFoundation.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/EtoileFoundation.h: Included EtoileXML headers.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/*.[hm]: Made all license notices consistent and pretty :-)

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML/*.h: Modified all import statements to be consistent and allows 
	these headers to be imported by other modules when compiling against the 
	framework.

2008-04-05  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileXML: Added by copying ETXML from Services/Jabber.
	* EtoileXML/GNUmakefile: Modified to compile as a framework, reference
	library symbols explicitly and integrate well in the build process. Also 
	cleaned a bit.
	* EtoileXML/Macros.h: Copied from Services/Jabber/ to make EtoileXML 